--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -55,21 +55,14 @@ jobs:
     name: E2E Tests
     runs-on: ubuntu-latest
     needs: build
+    container:
+      image: mcr.microsoft.com/playwright:v1.58.1-noble
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: ".nvmrc"
-          cache: "npm"
-
       - name: Install dependencies
         run: npm ci
-
-      - name: Install Playwright browsers
-        run: npx playwright install --with-deps
 
       - name: Download build artifacts
         uses: actions/download-artifact@v4
@@ -79,6 +72,8 @@ jobs:
 
       - name: Run E2E tests
         run: npm run test:e2e
+        env:
+          CI: true
 
       - name: Upload Playwright report
         uses: actions/upload-artifact@v4
