--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:e2e:docker": "./scripts/playwright-docker.sh",
     "test:e2e:docker:update": "./scripts/playwright-docker.sh --update-snapshots",
     "generate:html": "npx tsx scripts/generate-html.ts",
-    "generate:og-image": "npx tsx scripts/generate-og-image.ts"
+    "generate:og-image": "npx tsx scripts/generate-og-image.ts",
+    "prepare": "husky"
   },
   "dependencies": {
     "framer-motion": "^12.29.2",
@@ -40,12 +41,23 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "husky": "^9.1.7",
     "knip": "^5.82.1",
+    "lint-staged": "^16.2.7",
     "npm-run-all2": "^8.0.4",
     "prettier": "^3.8.1",
     "tsx": "^4.21.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{js,jsx,json,css,md,html}": [
+      "prettier --write"
+    ]
   }
 }
