--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:code": "eslint .",
     "lint:types": "tsc --noEmit",
     "lint:format": "prettier --check .",
+    "lint:style": "stylelint \"**/*.{css,scss}\" --ignore-pattern \"dist/**\"",
     "preview": "vite preview",
     "format": "prettier --write .",
     "knip": "knip",
@@ -46,6 +47,8 @@
     "lint-staged": "^16.2.7",
     "npm-run-all2": "^8.0.4",
     "prettier": "^3.8.1",
+    "stylelint": "^17.1.0",
+    "stylelint-config-standard": "^40.0.0",
     "tsx": "^4.21.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
@@ -56,7 +59,11 @@
       "eslint --fix",
       "prettier --write"
     ],
-    "*.{js,jsx,json,css,md,html}": [
+    "*.{js,jsx,json,md,html}": [
+      "prettier --write"
+    ],
+    "*.{css,scss}": [
+      "stylelint --fix",
       "prettier --write"
     ]
   }
