--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@floroz/portfolio-v4",
+  "name": "@floroz/retro-game-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -28,6 +28,7 @@
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-rnd": "^10.5.2",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
