--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "preview": "vite preview",
     "format": "prettier --write .",
     "knip": "knip",
+    "test:unit": "vitest run --project unit-tests",
+    "test:browser": "vitest run --project browser",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:docker": "./scripts/playwright-docker.sh",
@@ -34,15 +36,20 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@playwright/test": "^1.58.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "@vitest/browser-playwright": "^4.0.18",
+    "@vitest/ui": "^4.0.18",
     "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "happy-dom": "^20.5.0",
     "husky": "^9.1.7",
     "knip": "^5.82.1",
     "lint-staged": "^16.2.7",
@@ -55,7 +62,9 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "typescript-plugin-css-modules": "^5.2.0",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "vitest": "^4.0.18",
+    "vitest-browser-react": "^2.0.5"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
